--- a/views/Register.ejs
+++ b/views/Register.ejs
@@ -179,10 +179,11 @@
             event.preventDefault();
 
             // Make API call
-            fetch("http://localhost:3000/api/register", requestOptions)
+            fetch("http://localhost:8000/api/register", requestOptions)
                 .then(response => response.text())
                 .then(result => {
                     console.log(result);
+                    window.location.href = "/login";
                     // Handle success, e.g., show a success message or redirect to another page
                 })
                 .catch(error => {
